fix podcast on mobile - truncate podcast authors in feed

--- a/_src/assets/css/index.css
+++ b/_src/assets/css/index.css
@@ -610,6 +610,7 @@ button.mobile-item {
     justify-content: center;
     font-size: 2rem;
     border-radius: 50%;
+    flex-shrink: 0;
 }
 
 .podcast .content {
